# ember

./: Dockerfile  README.md  pyproject.toml
src/ember/: main.py
src/ember/utils/: logger.py  tools.py
tests/: test_main.py
